# NeuralCryptography

./: .gitignore  CMakeLists.txt  README.TXT  TPM.cpp  TPM.h  geneticAttackInfrastructure.cpp  geneticAttackInfrastructure.h  helper.h  histW.py  runGeneticAttack.cpp  runTPM.cpp  wB.cpp  workingBench.cpp
nc_tests/: CMakeLists.txt
nc_tests/dev_lang_tests/: CMakeLists.txt  basic_check.cpp
nc_tests/genetic_attack_tests/: CMakeLists.txt  genetic_attack_check.cpp
